<resources>
    <string name="app_name">Pig</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="clickimage">ClickImage</string>
    <string name="welcome_to_pig_game">Welcome to PIG GAME!</string>
    <string name="you">You</string>
    <string name="pig">PIG</string>
    <string name="computer">Computer</string>
    <string name="games_won">Games Won</string>
    <string name="total_score">Total Score</string>
    <string name="turn_total">Turn Total</string>
    <string name="dice_two">dice2</string>
    <string name="dice_one">dice1</string>
    <string name="dice_total">Dice Total</string>
    <string name="roll">Roll</string>
    <string name="hold">Hold</string>
    <string name="winner">Winner</string>
    <string name="loser">Loser</string>
    <string name="one_dice">One Dice = 1 Ends turn.</string>
    <string name="both_dice">Both Dice = 1 Resets Score.</string>
    <string name="computer_both_dice">"Computer rolled both 1s!".</string>
    <string name="new_one_dice">"Computer rolled both 1s!".</string>
    <string name="rolled_both_1s">You rolled both 1s!</string>
    <string name="rolled_a_1">You rolled a 1</string>
    <string name="you_rolled">You Rolled: %1$d</string>
    <string name="computer_rolled_one">Computer rolled a 1!</string>
    <string name="computer_rolled">Computer Rolled: %1$d</string>
    <string name="hold_text">HOLD</string>
    <string name="you_win">You win!</string>
    <string name="computer_wins">Computer wins!</string>
    <string name="zero">0</string>
    <string name="Show_Leaderboard">Show Leader Board</string>
    <string name="play_game">Play Game</string>
    <string name="Pig_Leader_Board">Pig Leader Board</string>

</resources>