<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pig"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/txtPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/you"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtComputer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/computer"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/games_won"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_score"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/turn_total"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txtPlayerWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/txtPlayer"
        app:layout_constraintStart_toStartOf="@+id/txtPlayer" />

    <TextView
        android:id="@+id/txtPlayerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/txtPlayerWon"
        app:layout_constraintStart_toStartOf="@+id/txtPlayerWon" />

    <TextView
        android:id="@+id/txtPlayerTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/txtPlayerScore" />

    <TextView
        android:id="@+id/txtComWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/txtComputer"
        app:layout_constraintStart_toStartOf="@+id/txtComputer" />

    <TextView
        android:id="@+id/txtComScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/txtComWon"
        app:layout_constraintStart_toStartOf="@+id/txtComWon" />

    <TextView
        android:id="@+id/txtComTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/txtComScore"
        app:layout_constraintStart_toStartOf="@+id/txtComScore" />

    <ImageView
        android:id="@+id/imgDiceTwo"
        android:layout_width="116dp"
        android:layout_height="228dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/dice_one"
        app:layout_constraintEnd_toStartOf="@+id/txtComTurn"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/imgDiceOne"
        android:layout_width="116dp"
        android:layout_height="228dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dice_one"
        app:layout_constraintBottom_toBottomOf="@+id/imgDiceTwo"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/txtPlayerTurn"
        app:layout_constraintTop_toTopOf="@+id/imgDiceTwo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/dice_1" />

    <TextView
        android:id="@+id/txtDiceTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/zero"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dice_total"
        app:layout_constraintEnd_toEndOf="@+id/txtDiceTotal"
        app:layout_constraintStart_toStartOf="@+id/txtDiceTotal"
        app:layout_constraintTop_toBottomOf="@+id/txtDiceTotal" />

    <Button
        android:id="@+id/btnRoll"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:onClick="onRollClick"
        android:text="@string/roll"
        app:layout_constraintEnd_toEndOf="@+id/imgDiceOne"
        app:layout_constraintStart_toStartOf="@+id/imgDiceOne"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/btnHold"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:onClick="onHoldClick"
        android:text="@string/hold"
        app:layout_constraintEnd_toEndOf="@+id/imgDiceTwo"
        app:layout_constraintStart_toStartOf="@+id/imgDiceTwo"
        app:layout_constraintTop_toTopOf="@+id/btnRoll" />

    <ImageView
        android:id="@+id/imgWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:contentDescription="@string/winner"
        android:onClick="endingImg"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/winner" />

    <ImageView
        android:id="@+id/imgLose"
        android:layout_width="456dp"
        android:layout_height="682dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="48dp"
        android:contentDescription="@string/loser"
        android:onClick="endingImg"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/loser"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/one_dice"
        app:layout_constraintBottom_toTopOf="@+id/btnRoll"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/both_dice"
        app:layout_constraintEnd_toEndOf="@+id/btnHold"
        app:layout_constraintStart_toStartOf="@+id/btnHold"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Button
        android:id="@+id/btnLeaderBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="leaderBoard"
        android:text="@string/Show_Leaderboard"
        app:layout_constraintEnd_toStartOf="@+id/btnHold"
        app:layout_constraintStart_toEndOf="@+id/btnRoll"
        app:layout_constraintTop_toBottomOf="@+id/btnHold" />


</androidx.constraintlayout.widget.ConstraintLayout>